# umineko_web_asm

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  build.sh  docker-compose.yml  nginx.conf
scripts/: convert-assets.sh  convert-one-audio.sh  convert-one-image.sh  convert-one-video.sh  entrypoint.sh  generate-manifest.sh
setup/: setup.bat  setup.ps1  setup.sh
signaling/: package-lock.json  package.json  server.js
src/platform/: web_stubs.cpp
tools/: decode_script  decode_script.c  setup-classic-sprites.sh
web/: chat.js  index.html
web/favicon/: site.webmanifest
web/js/: canvas.js  fetch-indicator.js  game-files.js  idbfs-sync.js  remote-files.js  vfs.js
